--- a/style.css
+++ b/style.css
@@ -1,97 +1,263 @@
 body{
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    margin: 50px;
-    margin: 0 5rem;
-    background-color: lightgreen;
+    background: rgb(0,0,0);
+    background: linear-gradient(90deg, rgb(121, 121, 121) 0%, rgba(255,255,255,1) 50%, rgb(120, 120, 120) 100%);
+    width: 100%;
+    margin-right: 0;
+}
+
+main{
+    margin-top: 50px;
 }
 
 .container {
-    margin-left: 5rem;
-    margin-right: 5rem;
-    background-color: lightblue;
-    padding: 2rem;
+    margin-left: 2rem;
+    margin-right: 2rem;
+    padding: 0.5rem;
     border-radius: 50px;
+    overflow: hidden;
+    background: rgba(255, 254, 254, 0.192);
 }
 
 
-.logo {
+.content-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    width: 100%;
+    height: 100%;
+}
+
+#projects{
+    min-height: 800px;
+}
+
+#about-me{
+    margin-top: 80px;
+}
+
+.portrait {
+    width: 40%;
+    min-width: 340px;
+    margin-top: 30px;
+    
+}
+
+#logo {
+    font-size: 1.7rem;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    margin-top: 0px;
 }
 
 nav {
-    margin: 0;
-    padding: 0;
-    display: flex;
-    font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-family:'Times New Roman', Times, serif;
     font-size: 2rem;
+    font-weight: light;
+    position: fixed;
+    background-color: white;
+    display: flex;
+    width: 102%;
+    margin-top: -0.5rem;
+    height: 70px;
+    text-align: center;
+    margin-left: -20px;
 }
 
 .nav-items {
+    margin-top: 0;
     display: flex;
     list-style-type: none;
-    padding: 0;
-    align-items: center;
-    margin: 0;
     margin-left: auto;
+    justify-content: space-around;
+    width: 100%;
+    height: 100%;
 }
 
 .nav-item {
-    border: 2px solid lightgreen;
-    padding: 2rem;
-    border-radius: 50px;
-    font-size: 2rem;
+    padding: 1rem;
 
 }
 
-.nav-item:hover {
-    background-color: lightblue;
-    transition-duration: 1s;
-    transition-property: background-color;
+.icon{
+    font-size: 2rem;
+}
+
+a:hover {
+    color: white;
+    background-color: black;
 }
 
 p {
-    line-height: 1.7rem;
     margin: 2rem;
+    font-size: 2.5vw;
+    text-align: justify;
+    text-justify:auto;
 }
 
+.description {
+    text-align: center;
+}
 
 
 a {
     color: black;
     text-decoration: none;
+    -webkit-transition: all 1s ease;
+    -moz-transition: all 1s ease;
+    -o-transition: all 1s ease;
+    -ms-transition: all 1s ease;
+    transition: all 1s ease;
+    padding: 2px;
+}
+
+.skill{
+    margin: 40px;
+    border: 2px solid;
+    padding: 5px;
+    background-color: lightgrey;
+    border-radius: 10%;
 }
 
 
 
-.projects {
+.items-container{
+    text-align: center;
     display: flex;
-    flex: wrap;
+    justify-content: space-around;
+    width: 100%;
+    font-size: 2rem;
+}
+
+#skills{
+    display: flex;
+    flex-wrap: wrap;
+    font-size: 3rem;
 }
 
 .project {
     flex-grow: 1;
     flex-basis: 1;
-    margin: 1rem;
+    margin: 0.5rem;
 }
 
 details {
+    width: 100%;
+    font-size: 3rem;
     cursor: pointer;
+    height: 100%;
 }
+
 
 details summary > * {
     display: inline;
+
 }
 
 .projectImage {
-    width: 50%;
-    height: 50%;
+    width: 100%;
 }
 
-.about-me-text-container {
+.text-container {
+    width: 45%;
+    height: 100%;
+}
+
+.select{
+    color: white;
+    background-color: black;
+}
+
+h2{
+    font-size: 3rem;
+    text-align: center;
+}
+
+section {
+    display: flex;
+    overflow: hidden;
+    margin-top: 25px;
+    margin-bottom: 50px;
+}
+
+
+#titleTwo{
     width: 50%;
 }
 
-img {
-    width: 10%;
-    height: 10%;
-    min-width: 50px;
+h3{
+    font-size: 2rem;
+    text-decoration: underline;
+}
+
+#first-about{
+    margin-top: 30px;
+}
+
+#contacts {
+    justify-content: center;
+    display: flex;
+    margin-top: 80px;
+    height: 80vh;
+}
+
+.normal{
+    all: revert;
+    color: blue;
+    text-decoration: underline;
+}
+
+.normal:hover{
+    all: revert;
+    color: blue;
+    text-decoration: underline;
+}
+
+.center{
+    display: flex;
+    justify-content: center;
+}
+
+#contact-info{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+
+@media screen and (max-width: 700px){
+    ul{
+        flex-direction: column;
+    }
+
+    nav{
+        position: relative;
+        height: 100%;
+    }
+
+    .container{
+        clear: both;
+    }
+    h1{
+        display: none;
+    }
+    p{
+        font-size: 1.5rem;
+        text-align: center;
+        margin: 0.5rem;
+    }
+    .items-container{
+        flex-direction: column;
+        display: flex;
+    }
+    .project{
+        text-align: center;
+    }
+    .project-title{
+        display: flex;
+        justify-content: center;
+    }
+    #projects {
+        min-height: 0px;
+    }
 }
